--- a/silver_product/static/src/css/stock_lot.css
+++ b/silver_product/static/src/css/stock_lot.css
@@ -2,3 +2,8 @@
 .form_stocklot  .o_inner_group {
     width: 100% !important;
 }
+
+div[name="product_brand_logo"] img, div[name="brand_logo"] img  {
+    height: 40px !important;
+}
+
