--- a/silver_product/views/product_view.xml
+++ b/silver_product/views/product_view.xml
@@ -77,15 +77,21 @@
                 </xpath>
 
                 <!-- 6. Add custom fields to Standard Price group -->
-                <xpath expr="//page[@name='general_information']//group[@name='group_standard_price']" position="inside">
-                    <field name="product_brand_id" required="is_required_brand == True" placeholder="Marca"/>
-                    <field name="hardware_model_id"/>
+
+                 <xpath expr="//page[@name='general_information']//group[@name='group_standard_price']" position="inside">
+                    <label for="product_brand_id" string="Marca"/>
+                    <div class="o_row d-flex align-items-center">
+                        <field name="product_brand_id" required="is_required_brand == True" placeholder="Marca" nolabel="1"/>
+                        <field name="product_brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not product_brand_id"/>
+                    </div>
+                     <field name="hardware_model_id"/>
                     <field name="is_required_brand" invisible="1"/>
                     <field name="number_list_partner"/>
                     <field name="allow_negative_stock" invisible="type != 'product'"/>
                     <field name="is_commission_product" widget="boolean_toggle"/>
                     <field name="commission_percentage" invisible="is_commission_product == False" widget="percentage"/>
                 </xpath>
+
 
 
                  <xpath expr="//page[@name='inventory']//group[@name='group_lots_and_weight']" position="inside">
