--- a/silver_product/views/silver_ap_views.xml
+++ b/silver_product/views/silver_ap_views.xml
@@ -8,7 +8,13 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='node_ids']"  position="after">
                     <field name="stock_lot_id"/>
-                    <field name="brand_id"/>
+
+                    <label for="brand_id" />
+                    <div class="o_row d-flex align-items-center">
+                        <field name="brand_id"  nolabel="1"/>
+                        <field name="brand_logo" widget="image" class="ms-2" style="width: 24px; height: 24px;" invisible="not brand_id"/>
+                    </div>
+
                     <field name="hardware_model_id"/>
                     <!--field name="software_version"/>
                     <field name="firmware_version"/-->
