--- a/silver_network/views/silver_core_views.xml
+++ b/silver_network/views/silver_core_views.xml
@@ -112,7 +112,7 @@
 
                                 <field name="ip"  required="1"/>
                                 <field name="port" />
-                                  <field name="radius_id" required="1"/>
+                                  <field name="radius_id"/>
                                 <field name="radius_admin_id" />
                                  <field name="state" widget="badge"
                            decoration-success="state in ['active', 'connected']"
