--- a/silver_network/views/silver_core_views.xml
+++ b/silver_network/views/silver_core_views.xml
@@ -112,8 +112,8 @@
 
                                 <field name="ip"  required="1"/>
                                 <field name="port" />
-                                  <field name="radius_id"/>
-                                <field name="radius_admin_id" />
+                                  <field name="radius_id" options="{'no_create_edit': False, 'no_quick_create': True}"/>
+                                <field name="radius_admin_id" options="{'no_create_edit': False, 'no_quick_create': True}"/>
                                  <field name="state" widget="badge"
                            decoration-success="state in ['active', 'connected']"
                            decoration-warning="state in ('suspended', 'disabled')"
