--- a/silver_network/views/silver_cradius_views.xml
+++ b/silver_network/views/silver_cradius_views.xml
@@ -10,10 +10,12 @@
                 <xpath expr="//field[@name='radius_id']" position="attributes">
                     <attribute name="invisible">is_radius==True</attribute>
                     <attribute name="domain">[('is_radius', '=', True)]</attribute>
+                      <attribute name="context">{'open_product_template': True, 'default_is_radius':True}</attribute>
                 </xpath>
 <xpath expr="//field[@name='radius_admin_id']" position="attributes">
                     <attribute name="invisible">is_radius==True</attribute>
                     <attribute name="domain">[('is_radius', '=', True)]</attribute>
+     <attribute name="context">{'open_product_template': True, 'default_is_radius':True}</attribute>
                 </xpath>
                 <!--xpath expr="//header" position="inside">
 
